# pycounts

./: CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py
src/pycounts/: datasets.py
src/pycounts/data/: flatland.txt
tests/: einstein.txt  test_pycounts.py
