[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Maheshwar Bolewar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
